# ShadowSniff

./: .gitignore  Cargo.toml  LICENSE  OBFUSCATION.md  README.MD  README.md  build.rs  justfile  obfuscation.toml  setup_advanced_obfuscation.bat
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
builder/: Cargo.toml
builder/src/: empty_log.rs  lib.rs  main.rs  message_box.rs  send_expr.rs  send_settings.rs  sender_service.rs  start_delay.rs
code-vm/: Cargo.toml
code-vm/src/: lib.rs
collector/: Cargo.toml
collector/src/: atomic.rs  display.rs  lib.rs
database/: Cargo.toml  build.rs
database/src/: lib.rs
database/src/bindings/: mod.rs  sqlite3_bindings.rs
docs/: phase3_integration.md
examples/: complete_phase3_example.rs
filesystem/: Cargo.toml
filesystem/src/: lib.rs  memory.rs  path.rs  storage.rs  virtualfs.rs
hollowing/: Cargo.toml  README.MD
hollowing/src/: lib.rs
hypervisor/: Cargo.toml
hypervisor/src/: lib.rs
ipinfo/: Cargo.toml
ipinfo/src/: lib.rs
json/src/: lib.rs  parser.rs  tokenize.rs
llvm-passes/: README.md
network-keys/: Cargo.toml
network-keys/src/: lib.rs
obfuscation/: Cargo.toml
obfuscation/src/: advanced_anti_analysis.rs  anti_analysis.rs  anti_debug.rs  binary_protection.rs  control_flow.rs  integration_example.rs  lib.rs  runtime_polymorphism.rs  simple_protection.rs  string_obfuscation.rs
regedit/: Cargo.toml
regedit/src/: lib.rs
requests/: Cargo.toml
requests/src/: lib.rs
scripts/: build_obfuscated.sh  just.bat
sender/: Cargo.toml
sender/src/: catbox.rs  discord_webhook.rs  external_upload.rs  fallback.rs  gofile.rs  lib.rs  size_fallback.rs  size_limit.rs  telegram_bot.rs  tmpfiles.rs
shadowsniff/: Cargo.toml
shadowsniff/browsers/: Cargo.toml
shadowsniff/browsers/src/: gecko.rs  lib.rs
shadowsniff/browsers/src/chromium/: autofill.rs  bookmarks.rs  cookies.rs  credit_cards.rs  creditcards.rs  downloads.rs  history.rs  mod.rs  passwords.rs
shadowsniff/browsers/src/gecko/: cookies.rs  history.rs  mod.rs  passwords.rs
shadowsniff/ftp/: Cargo.toml
shadowsniff/ftp/src/: filezilla.rs  lib.rs
shadowsniff/games/: Cargo.toml
shadowsniff/games/src/: lib.rs  steam.rs
shadowsniff/messengers/: Cargo.toml
shadowsniff/messengers/src/: discord.rs  lib.rs  telegram.rs
shadowsniff/src/: clipboard.rs  lib.rs  processes.rs  screenshot.rs  systeminfo.rs  userinfo.rs
shadowsniff/vpn/: Cargo.toml
shadowsniff/vpn/src/: lib.rs  openvpn.rs  outline.rs
src/: allocator.rs  debug.rs  main.rs  panic.rs  release.rs
tasks/: Cargo.toml
tasks/src/: lib.rs
tools/: advanced_pe_obfuscator.py  post_obfuscate.bat  post_obfuscate.py  runtime_packer.py  rust_obfuscation_generator.py
utils/: Cargo.toml
utils/src/: base64.rs  lib.rs  logging.rs  path.rs  pc_info.rs  process.rs  random.rs
utils/src/browsers/: chromium.rs
zip/: Cargo.toml
zip/src/: create.rs  lib.rs
