[package]
name = "tasks"
version = "0.1.0"
edition = "2024"

[dependencies]
obfstr = "0.4.4"
utils = { path = "../utils" }
collector = { path = "../collector" }
filesystem = { path = "../filesystem" }
windows-sys = { version = "0.60.2", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security"
] }