[package]
name = "games"
version = "0.1.0"
edition = "2024"

[dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_System_Registry"] }
filesystem = { path = "../../filesystem" }
collector = { path = "../../collector" }
obfstr = "0.4.4"
tasks = { path = "../../tasks" }
utils = { path = "../../utils" }
regedit = { path = "../../regedit" }